--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@googlemaps/js-api-loader": "^1.15.1",
     "@react-google-maps/api": "^2.18.1",
     "firebase": "^9.21.0",
+    "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
+    "react-alice-carousel": "^2.7.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0"
   },
